--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@ a
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
-                <h2 class="section__title">About</h2>
+                <h2 class="section__title">About us</h2>
                 <span class="section__subtitle">Schologic - Cùng bạn dành học bổng FPT</span>
 
                 <div class="about__container container grid">
                     <img style="height: 100%; width: 100%;" src="assets/World2.png" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
-                            Có mặt tại 3 tỉnh, thành lớn tại 3 miền Bắc Trung Nam, cùng dàn mentor có trên 3 năm kinh nghiệm dạy học, đạt học bổng trên 50%, Schologic trở thành cộng đồng giáo dục trực tuyến, môi trường học tập, giảng dạy và chia sẻ về học bổng FPT.
+                            Có mặt tại 3 miền Bắc Trung Nam cùng với dàn mentor có trên 3 năm kinh nghiệm dạy học, đạt học bổng trên 50%, Schologic trở thành cộng đồng giáo dục trực tuyến, môi trường học tập, giảng dạy và chia sẻ về học bổng FPT.
                         </p>
 
                         <div class="about__info">
@@ -184,8 +184,8 @@ a
                                     <div class="portfolio__content grid swiper-slide">
                                         <img style="height: 100%; width: 100%;" src="assets/TC.png" alt="" class="portfolio__img">
                                         <div class="portfolio__data">
-                                            <h3 class="portfolio__title">Giảng viên</h3>
-                                            <p style="margin: 15px 0 29px 0 !important;">Giảng viên có kỹ năng sư phạm tốt, khả năng truyền đạt kiến thức một cách hiệu quả và tạo ra môi trường học tập tích cực cho học sinh.</p>
+                                            <h3 class="portfolio__title">Mentor</h3>
+                                            <p style="margin: 15px 0 29px 0 !important;">Mentor có kỹ năng sư phạm tốt, khả năng truyền đạt kiến thức một cách hiệu quả và tạo ra môi trường học tập tích cực cho học sinh.</p>
                                             <a target="_blank" href="https://www.facebook.com/profile.php?id=61552417436724" class="button button--flex button--small portfolio__button">
                                                 Đăng ký 
                                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -265,7 +265,7 @@ a
                                         </div>
 
                                         <p class="testimonial__description">
-                                            Giảng viên nhiệt tình, luôn hỗ trợ bất cứ khi nào em gặp khó khăn trong vấn đề học hành. Không những cải thiện về vấn đề kiến thức mà em còn được cải thiện về vấn đề tâm sinh lý.
+                                            Mentor nhiệt tình, luôn hỗ trợ bất cứ khi nào em gặp khó khăn trong vấn đề học hành. Không những cải thiện về vấn đề kiến thức mà em còn được cải thiện về vấn đề tâm sinh lý.
                                     </div>
 
                                 </div>
