--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ a
                                     <div class="contact__inputs grid">
                                         <div>
                                             <button class="button button--flex" style="border : none ; font-size: medium ;">
-                                                <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfP59BRiPpqY6C0F6lhKVKZFQ_234rp7gUXPVZBx8UUWrdJDg/viewform?fbclid=IwAR3bDRNKU0KOU0U_EtbTYEmuHRCgRwaEVS_ejssMPrNkbgtrs3WFvsNq-aI" >
+                                                <a style="color: #fff !important;" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfP59BRiPpqY6C0F6lhKVKZFQ_234rp7gUXPVZBx8UUWrdJDg/viewform?fbclid=IwAR3bDRNKU0KOU0U_EtbTYEmuHRCgRwaEVS_ejssMPrNkbgtrs3WFvsNq-aI" >
                                                     Đăng ký<i class="uil uil-envelope-send button__icon"></i>
                                                 </a>
                                                 
