--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-a
+
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
@@ -17,6 +17,13 @@ a
         <link rel="icon" href="assets/img/leon-icon.png">
 
         <title>SCHOLOGIC - Ignite your future</title>
+
+        <style>
+            .home__description {
+                font-weight: bold;
+                min-width: 360px;
+            }
+        </style>
     </head>
 
 <body>
@@ -423,61 +430,57 @@ a
                         </section>
                         </main>
 
-                        <!--==================== FOOTER ====================-->
-                        <footer class="footer">
-                            <div class="footer__bg">
-                                <div class="footer__container container grid">
-                                    <div class="footer__data">
-                                        <h1 class="footer__title">SCHOLOGIC</h1>
-                                        <span class="footer__subtitle">By Schologic Company</span>
-                                    </div>
-                                    <ul class="footer__links">
-                                        <li>
-                                            <a href="#portfolio" class="footer__link">
+        <!--==================== FOOTER ====================-->
+        <footer class="footer">
+            <div class="footer__bg">
+                <div class="footer__container container grid">
+                    <div class="footer__data">
+                        <h1 class="footer__title">SCHOLOGIC</h1>
+                        <span class="footer__subtitle">By Schologic Company</span>
+                    </div>
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#portfolio" class="footer__link">
 
-                                            </a>
-                                        </li>
+                            </a>
+                        </li>
 
-                                        <li>
-                                            <a href="#contact" class="footer__link">
-                                                Liên hệ
-                                            </a>
-                                        </li>
-                                    </ul>
+                        <li>
+                            <a href="#contact" class="footer__link">
+                                Liên hệ
+                            </a>
+                        </li>
+                    </ul>
 
-                                    <div class="footer__socials">
-                                        <a target="_blank" href="https://www.facebook.com/profile.php?id=61552417436724" class="footer__social" >
-                                            <i class="uil uil-facebook-f"></i>
-                                        </a>
-
-                                        <a target="_blank" href="https://www.facebook.com/profile.php?id=61552417436724" class="footer__social" >
-                                            <i class="uil uil-instagram"></i>
-                                        </a>
-
-
-                                    </div>
-                                </div>
-
-                                <p class="footer__copy">SCHOLOGIC 2024</p>
-                            </div>
-                        </footer>
-
-                        <!--==================== SCROLL TOP ====================-->
-                        <a href="#" class="scrollup" id="scroll-up">
-                            <i class="uil uil-arrow-up scrollup__icon"></i>
+                    <div class="footer__socials">
+                        <a target="_blank" href="https://www.facebook.com/profile.php?id=61552417436724" class="footer__social" >
+                            <i class="uil uil-facebook-f"></i>
                         </a>
 
-                        <!--==================== EMAIL JS ====================-->
-                        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
-                        <!--==================== SWIPER JS ====================-->
-                        <script src="assets/swin.min.js"></script>
-
-                        <!--==================== MAIN JS ====================-->
-                        <script src="assets/main.js"></script>
+                        <a target="_blank" href="https://www.facebook.com/profile.php?id=61552417436724" class="footer__social" >
+                            <i class="uil uil-instagram"></i>
+                        </a>
 
 
+                    </div>
+                </div>
 
-                        </body>
+                <p class="footer__copy">SCHOLOGIC 2024</p>
+            </div>
+        </footer>
 
-                        </html>
+            <!--==================== SCROLL TOP ====================-->
+            <a href="#" class="scrollup" id="scroll-up">
+                <i class="uil uil-arrow-up scrollup__icon"></i>
+            </a>
+
+            <!--==================== EMAIL JS ====================-->
+            <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+            <!--==================== SWIPER JS ====================-->
+            <script src="assets/swin.min.js"></script>
+
+            <!--==================== MAIN JS ====================-->
+            <script src="assets/main.js"></script>
+    </body>
+</html>
