--- a/index.html
+++ b/index.html
@@ -367,6 +367,58 @@
                                             Chị Hằng dạy văn cuốn quá em không thể ngủ gật nổi ~
                                     </div>
 
+                                    <!--==================== TESTIMONIAL  6 ====================-->
+                                    <div class="testimonial__content swiper-slide">
+                                        <div class="testimonial__data">
+                                            <div class="testimonial__header">
+                                                <img style="height: 80px;width: 95px;" src="assets/download.png" alt="" class="testimonial__img">
+
+                                                <div>
+                                                    <h3 class="testimonial__name">Dương</h3>
+                                                    <span class="testimonial__client">Phổ thông Trung Văn</span>
+                                                </div>
+                                            </div>
+
+                                            <div>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+
+                                            </div>
+                                        </div>
+
+                                        <p class="testimonial__description">
+                                            Mentor nói dễ hiểu, chỗ nào chưa hiểu được giải thích lại ngay
+                                    </div>
+
+                                    <!--==================== TESTIMONIAL  7 ====================-->
+                                    <div class="testimonial__content swiper-slide">
+                                        <div class="testimonial__data">
+                                            <div class="testimonial__header">
+                                                <img style="height: 80px;width: 95px;" src="assets/download.png" alt="" class="testimonial__img">
+
+                                                <div>
+                                                    <h3 class="testimonial__name">Dương</h3>
+                                                    <span class="testimonial__client">Phổ thông Trung Văn</span>
+                                                </div>
+                                            </div>
+
+                                            <div>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+                                                <i class="uil uil-star testimonial__icon-star"></i>
+
+                                            </div>
+                                        </div>
+
+                                        <p class="testimonial__description">
+                                            9 điểm rưỡi không có nhưng nhị gì hớt ó 
+                                    </div>
+
                                 </div>
                                 <!-- add pagination -->
                                 <div class="swiper-pagination swiper-pagination-testimonial"></div>
