--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
                                                 <img style="height: 80px;width: 95px;" src="assets/download.png" alt="" class="testimonial__img">
 
                                                 <div>
-                                                    <h3 class="testimonial__name">Dương</h3>
-                                                    <span class="testimonial__client">Phổ thông Trung Văn</span>
+                                                    <h3 class="testimonial__name">Mạnh</h3>
+                                                    <span class="testimonial__client">Phổ thông HCM</span>
                                                 </div>
                                             </div>
 
